<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_dialog_select_language"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/uvn_cake"
            android:paddingVertical="10dp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bland" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vietnam" />

            <TextView
                android:id="@+id/vietnamese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/uvn_cake"
                android:text="@string/vietnamese"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bland" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_england" />

            <TextView
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/uvn_cake"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </LinearLayout>

    </LinearLayout>
</layout>